--- a/templates/main.html
+++ b/templates/main.html
@@ -185,7 +185,7 @@ table, tr, td {
         <col width="30%">
           <tr>
             <td>
-              <span class="label">Verification code 
+              <span class="label">Verification code
                 {% if error_message_verification %}
                 <b style="color: red">{{verification_index_chars}}</b>:
                 {% else %}
@@ -233,6 +233,8 @@ table, tr, td {
 		<br><br>
     <center>
 		Crypto-Cheque is open source: <a href="https://github.com/hroser/crypto-cheque" style="color: black;">https://github.com/hroser/crypto-cheque</a>
+    <br><br>
+    If there are any other issues with Crypto Cheque, please contact us: <a href="mailto:info@crypto-cheque.com" style="color: black;">info@crypto-cheque.com</a>
     </center>
 		</div>
 
