Add service fee info

--- a/templates/print.html
+++ b/templates/print.html
@@ -117,7 +117,7 @@ VERIFICATION:
            <span style="font-size: 6px !important;">{{cheque_data['cheque'].public_address}}</span><br><br>
            <p style="margin-bottom:5px; margin-top:0mm;"><small>CHECK BALANCE:</small></p>
            <img src="http://api.qrserver.com/v1/create-qr-code/?size=80x80&data=https://live.blockcypher.com/btc/address/{{cheque_data['cheque'].public_address}}/" alt="" title=""><br><br>
-           <p style="margin-bottom:3px; margin-top:0mm;"><small>REDEEM:</small></p>
+           <p style="margin-bottom:3px; margin-top:0mm;"><small>REDEEM (1.5% fee):</small></p>
 		   <span style="font-size: 8px !important; margin-top:0mm;">www.crypto-cheque.com</span><br><br>
         </center>
         </div>
