Add information to main page and print page

--- a/templates/main.html
+++ b/templates/main.html
@@ -231,11 +231,16 @@ table, tr, td {
 
 		<div class="centerinfo">
 		<br><br>
-    <center>
+		Crypto Cheques are basically paper wallets with a convenient way of redeeming. 
+		For redeeming bitcoins from a cheque the cheque ID as well as the verification information on the paper cheque are necessarily needed (we store each private key encrypted based on this information).
+		<br><br>
+		<b style = "color:red;">PLEASE NOTE: We will not be able to recover any bitcoins if the information printed on the cheque is lost!</b>
+		<br><br>
+		Payout fees: 1.5% service fee + bitcoin network fee
+		<br><br>
 		Crypto-Cheque is open source: <a href="https://github.com/hroser/crypto-cheque" style="color: black;">https://github.com/hroser/crypto-cheque</a>
-    <br><br>
-    If there are any other issues with Crypto Cheque, please contact us: <a href="mailto:info@crypto-cheque.com" style="color: black;">info@crypto-cheque.com</a>
-    </center>
+		<br><br>
+		If there are any other issues with Crypto Cheque, please contact us: <a href="mailto:info@crypto-cheque.com" style="color: black;">info@crypto-cheque.com</a>
 		</div>
 
 	<br><br><br><br>
