--- a/templates/print.html
+++ b/templates/print.html
@@ -85,7 +85,7 @@ white-space:pre;
 <body onload="window.print();">
 
 <hr>
-<h2 align="center">!!! Print and use the cheques only one time !!!</h2>
+<h2 align="center">!!! Print and use cheques only one time !!!</h2>
 
 	{% for cheque_data in cheque_dates %}
 
@@ -101,7 +101,7 @@ Memo: ___________________________________________________<br><br><br>
 Date: _________________________________    Signature: _____________________________<br>
             </div>
             <div class="strip">
-VERIFICATION:
+<b>VERIFICATION (Please note: ID and verification data are needed for redeeming, bitcoins can not recovered otherwise)</b>:
 
 {{cheque_data['verification_bars'][0]}}  {{cheque_data['verification_bars'][2]}}
 {{cheque_data['verification_bars'][1]}}  {{cheque_data['verification_bars'][3]}}
