Correct transaction fee calculation

--- a/templates/main.html
+++ b/templates/main.html
@@ -234,7 +234,7 @@ table, tr, td {
 		Crypto Cheques are basically paper wallets with a convenient way of redeeming. 
 		For redeeming bitcoins from a cheque the cheque ID as well as the verification information on the paper cheque are necessarily needed (we store each private key encrypted based on this information).
 		<br><br>
-		<b style = "color:red;">PLEASE NOTE: We will not be able to recover any bitcoins if the information printed on the cheque is lost!</b>
+		<b style = "color:red;">PLEASE NOTE: It is not possible to recover any bitcoins if the information printed on the cheque is lost!</b>
 		<br><br>
 		Payout fees: 1.5% service fee + bitcoin network fee
 		<br><br>
