Remove viewport tag

--- a/templates/main.html
+++ b/templates/main.html
@@ -54,7 +54,7 @@ table, tr, td {
 	<title>Crypto Cheque</title>
 	<meta name="description" content="">
 	<meta name="keywords" content="">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport">
 	<style type="text/css"></style>
 
   <!-- recaptcha -->
