--- a/templates/print.html
+++ b/templates/print.html
@@ -101,7 +101,7 @@ Memo: ___________________________________________________<br><br><br>
 Date: _________________________________    Signature: _____________________________<br>
             </div>
             <div class="strip">
-<b>VERIFICATION (ID and verification data are needed for redeeming, bitcoins can not be recovered otherwise)</b>:
+<b>VERIFICATION (ID and verification data are needed for redeeming, bitcoins can not be recovered otherwise):</b>
 
 {{cheque_data['verification_bars'][0]}}  {{cheque_data['verification_bars'][2]}}
 {{cheque_data['verification_bars'][1]}}  {{cheque_data['verification_bars'][3]}}
