--- a/templates/main.html
+++ b/templates/main.html
@@ -232,12 +232,9 @@ table, tr, td {
 
 		<div class="centerinfo">
 		<br><br>
-		Crypto Cheques are basically paper wallets with a convenient way of redeeming.
-		For redeeming bitcoins from a cheque the cheque ID as well as the verification information on the paper cheque are necessarily needed (we store each private key encrypted based on this information).
+		Crypto Cheques are disposable paper wallets with a convenient way of redeeming. We store each private key encrypted based on the ID and verification information on the paper cheque.
 		<br><br>
 		<b style = "color:red;">PLEASE NOTE: It is not possible to recover any bitcoins if the information printed on the cheque is lost!</b>
-		<br><br>
-		Payout fees: 1.5% service fee + bitcoin network fee
 		<br><br>
 		Crypto-Cheque is open source: <a href="https://github.com/hroser/crypto-cheque" style="color: black;">https://github.com/hroser/crypto-cheque</a>
 		<br><br>
