--- a/templates/main.html
+++ b/templates/main.html
@@ -233,7 +233,7 @@ table, tr, td {
 
 		<div class="centerinfo">
 		<br><br>
-		Crypto Cheques are disposable paper wallets with a convenient way of redeeming. We store each private key encrypted based on the ID and verification information on the paper cheque.
+		Crypto Cheques are disposable paper wallets with a convenient way of redeeming.
 		<br><br>
 		<b style = "color:red;">PLEASE NOTE: It is not possible to recover any bitcoins if the information printed on the cheque is lost!</b>
 		<br><br>
