Update layout, update keys.json

--- a/templates/main.html
+++ b/templates/main.html
@@ -120,8 +120,8 @@ table, tr, td {
       <div class="centertable">
       <table class="table" style="width:100%">
       <col width="40%">
-      <col width="40%">
-			<col width="30%">
+      <col width="35%">
+			<col width="35%">
         <tr>
           <td>ID:</td>
           <td align="right">{{cheque_ident_requested}}</td>
@@ -240,9 +240,9 @@ table, tr, td {
 		<br><br>
 		Payout fees: bitcoin network fee (depending on current mining fees) + service fee (max. 0.8%) 
 		<br><br>
-		Crypto-Cheque is open source: <a href="https://github.com/crypto-cheque/crypto-cheque" style="color: black;">https://github.com/crypto-cheque/crypto-cheque</a>
+		Crypto-Cheque is open source: <a href="https://github.com/crypto-cheque/crypto-cheque" target="_blank" style="color: black;">https://github.com/crypto-cheque/crypto-cheque</a>
 		<br><br>
-		If there are any other issues with Crypto Cheque, please contact us: <a href="mailto:info@crypto-cheque.com" style="color: black;">info@crypto-cheque.com</a>
+		If there are any issues with Crypto Cheque, please contact us: <a href="mailto:info@crypto-cheque.com" style="color: black;">info@crypto-cheque.com</a>
 		</div>
 
 	<br><br><br><br>
